# django-meili

./: pyproject.toml
django_meili/: apps.py  query.py  querysets.py  utils.py
django_meili/management/commands/: syncindex.py
