[tool.poetry]
name = "django-meili"
version = "0.1.0"  # You'll want to set your desired version here
description = ""  # Add your description here
authors = ["Ian Kollipara <ian.kollipara@cune.edu>"]
readme = "README.md"
packages = [{include = "django_meili"}]
repository = "https://github.com/ikollipara/django-meili"
homepage = "https://github.com/ikollipara/django-meili"
documentation = "https://github.com/ikollipara/django-meili"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
django = "*"
meilisearch = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"